Add cloudflare analytics

--- a/index.html
+++ b/index.html
@@ -30,5 +30,6 @@
             Kontakt: <a href="mailto:info@po8klasie.pl">info@po8klasie.pl</a>
         </p>
     </main>
+    <script defer src="https://static.cloudflareinsights.com/beacon.min.js" data-cf-beacon='{"token": "18653999560441879e956201ec1b78c6"}'></script>
 </body>
 </html>
