--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h1>po<span>8</span>klasie</h1>
         </header>
         <p>
-            Tworzymy prawdopodbnie najprostszą i najszybszą wyszukiwarkę szkół średnich.
+            Tworzymy prawdopodobnie najprostszą i najszybszą wyszukiwarkę szkół średnich.
         </p>
         <a href="https://test.po8klasie.pl" class="button-link">Zobacz wersję testową aplikacji</a>
         <small>Uwaga: Wersja testowa może zawierać błędy oraz znacząco różnić się od planowanej wersji 1.0</small>
